; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_numeric_maximum_size.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_numeric_maximum_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VARHDRSZ = common dso_local global i64 0, align 8
@DEC_DIGITS = common dso_local global i32 0, align 4
@NUMERIC_HDRSZ = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @numeric_maximum_size(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @VARHDRSZ, align 8
  %8 = icmp slt i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i64 -1, i64* %2, align 8
  br label %29

10:                                               ; preds = %1
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* @VARHDRSZ, align 8
  %13 = sub nsw i64 %11, %12
  %14 = ashr i64 %13, 16
  %15 = and i64 %14, 65535
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @DEC_DIGITS, align 4
  %19 = sub nsw i32 %18, 1
  %20 = mul nsw i32 2, %19
  %21 = add nsw i32 %17, %20
  %22 = load i32, i32* @DEC_DIGITS, align 4
  %23 = sdiv i32 %21, %22
  store i32 %23, i32* %5, align 4
  %24 = load i64, i64* @NUMERIC_HDRSZ, align 8
  %25 = load i32, i32* %5, align 4
  %26 = sext i32 %25 to i64
  %27 = mul i64 %26, 4
  %28 = add i64 %24, %27
  store i64 %28, i64* %2, align 8
  br label %29

29:                                               ; preds = %10, %9
  %30 = load i64, i64* %2, align 8
  ret i64 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
